# vlc

./: .gitignore  AUTHORS  configure.ac
compat/: inet_pton.c
doc/: pnacl.md
extras/ppapi/: http-server
include/: vlc_arrays.h  vlc_block_helper.h  vlc_common.h  vlc_fixups.h  vlc_md5.h  vlc_ppapi.h  vlc_threads.h  vlc_vout_window.h
include/vlc/: libvlc.h  libvlc_media_player.h
lib/: core.c  media_player.c
modules/: MODULES_LIST
modules/access/: Makefile.am  ppapi-access.cpp
modules/access/archive/: access.c  archive.c  archive.h  stream.c
modules/access/zip/: zip.h  zipaccess.c  zipstream.c
modules/audio_filter/: Makefile.am
modules/audio_filter/channel_mixer/: headphone.c  mono.c
modules/audio_output/: Makefile.am  ppapi-aout.c
modules/control/: Makefile.am
modules/control/ppapi/: control.cpp  ver-a.hpp  ver-b.hpp
modules/logger/: Makefile.am
modules/packetizer/: Makefile.am
modules/video_chroma/: swscale.c
modules/video_filter/: Makefile.am  puzzle.c
modules/video_output/: Makefile.am
modules/video_output/ppapi/: ppapi-vout-gl.c  ppapi-vout-graphics3d.c  ppapi-vout-window.c
modules/visualization/: glspectrum.c
src/: Makefile.am  ppapi.c
src/input/: access.c  decoder.c  es_out_timeshift.c  input.c
src/network/: rootbind.c
src/posix/: error.c  filesystem.c  plugin.c  thread.c
